--- a/Web.Statu/Views/Home/Osoba.cshtml
+++ b/Web.Statu/Views/Home/Osoba.cshtml
@@ -114,7 +114,7 @@
                                 Funkce
                             </div>
                             <div class="new-p">
-                                @HlidacStatu.Web.Util.LowBox(80, funkceOsoba)
+                                @WebUtil.LowBox(80, funkceOsoba)
                             </div>
                         </div>
                     }
