--- a/Web.Statu/Views/Home/Subjekt_Dodavatel.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Dodavatel.cshtml
@@ -43,7 +43,7 @@ new  ReportDataSource.Column() { Name="IČO",
                             System.Tuple<string,string> data = (System.Tuple<string,string>)s;
                             return string.Format(@"{1} <a href='/subjekt/{0}'>detail o subj</a>
                                                    <br/>{3}", data.Item2, data.Item1, Model.ICO,
-                                                   Util.AddSearchBtn("/hledatSmlouvy","icoPlatce:" + data.Item2 + " AND icoPrijemce:" + Model.ICO,"smlouvy mezi subjekty").ToHtmlString());
+                                                   WebUtil.AddSearchBtn("/hledatSmlouvy","icoPlatce:" + data.Item2 + " AND icoPrijemce:" + Model.ICO,"smlouvy mezi subjekty").ToHtmlString());
                         },
     TextRender = (s) => { return ((System.Tuple<string,string>)s).Item1.ToString(); }
 },
@@ -61,7 +61,7 @@ new  ReportDataSource.Column() { Name="IČO",
                             return string.Format(@"{1} <a href='/subjekt/{0}'>detail o subj</a>
                                                    <br/>{3}"
                                                     , data.Item2, data.Item1, Model.ICO
-                                                    ,Util.AddSearchBtn("/hledatSmlouvy","icoPlatce:" + data.Item2 + " AND icoPrijemce:" + Model.ICO,"smlouvy mezi subjekty").ToHtmlString()
+                                                    ,WebUtil.AddSearchBtn("/hledatSmlouvy","icoPlatce:" + data.Item2 + " AND icoPrijemce:" + Model.ICO,"smlouvy mezi subjekty").ToHtmlString()
                                                     );
                         },
     TextRender = (s) => { return ((System.Tuple<string,string>)s).Item1.ToString(); }
